--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,72 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.Icon-container {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.icon {
+  border: 1px solid #7096ff;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 22px;
+  color: #7096ff;
+}
+.test {
+  padding: 10px;
+  border: 0.1px solid lightgrey;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.about-us {
+  flex: 1;
+}
+.test {
+  display: flex;
+}
+.grey {
+  color: grey;
+}
+.App {
+  border: 0.1px solid lightgray;
+}
+.Container {
+  padding-left: 20px;
+  padding-right: 40px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 0.1px solid lightgrey;
+}
+.Container1,
+.Container2,
+.Container3,
+.Container4 {
+  
+  border-bottom: 1px solid lightgrey;
+}
+.Inside-Container4, .Inside-Container3, .Inside-Container2, .Inside-Container1 {
+  justify-content: space-between;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+.rotated {
+  transform: rotate(180deg);
+  transition: 0.3s ease-in-out;
+}
+.rotate {
+  transition: 0.3s ease-in-out;
+}
+.rotated1 {
+  transform: rotate(90deg);
+  transition: 0.3s ease-in-out;
+}
+.rotate1 {
+  transition: 0.3s ease-in-out;
+}
+.text1,
+.text2,
+.text3,
+.text4 {
+  padding-top: 10px;
+  padding-bottom: 10PX;
 }
